--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ theme: null
 #   dist: false
 #   shortcodes: true
 
+remote_theme: rundocs/jekyll-rtd-theme
+
 readme_index:
   with_frontmatter: true
 
